# mcp-ccnu-lib

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
scripts/: dump_signing.py  probe.py  probe_headers.py  probe_reserve.py  smoke_mcp.py  try_api.py  try_login.py  try_reserve.py
src/ccnu_lib/: __init__.py  api.py  browser.py  challenges.py  config.py  db.py  http_client.py  login.py  reservations.py  selectors.py  server.py
