[project]
name = "mcp-ccnu-lib"
version = "0.2.0"
description = "CCNU library space-reservation MCP service (Playwright-driven)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "playwright==1.60.0",   # 必须与 Dockerfile 的 playwright 镜像 tag 一致
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccnu_lib"]
