[project]
name = "mcp-ccnu-lib"
version = "0.2.0"
description = "CCNU library space-reservation MCP service (pure-HTTP, no browser)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "cryptography>=42.0",   # AES 解出 HMAC 签名密钥
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccnu_lib"]
